Update to Java 17 (#53)